test/Fail/ConflictingRelevance1.err
ConflictingRelevance1.agda:4.42: error: [ParseError]
)<ERROR>  → A

-- Should fail.  (Curren...
